// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainArea should match snapshot when currentGraph does not exists 1`] = `
<Connect
  actions={Object {}}
  currentGraph="graph-1"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
    }
  }
  mapToProps={[Function]}
  networkVisualisation="datatable"
  sidebarView="networkGraphs"
>
  <Component />
</Connect>
`;

exports[`MainArea should match snapshot when currentGraph exists 1`] = `
<Connect
  actions={Object {}}
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
    }
  }
  mapToProps={[Function]}
  networkVisualisation="graph"
  sidebarView="networkGraphs"
>
  <Component />
</Connect>
`;

exports[`MainArea should match snapshot when currentGraph exists and datatable to be shown 1`] = `
<Connect
  actions={Object {}}
  currentGraph="graph-0"
  graphData={
    Object {
      "graph-0": Object {
        "label": "Main",
        "noDelete": true,
      },
    }
  }
  mapToProps={[Function]}
  networkVisualisation="datatable"
  sidebarView="networkGraphs"
>
  <Component />
</Connect>
`;
